<resources>
    <string name="app_name">TitansTabs</string>


    <!-- Login Activity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>

    <string name="empty_email_or_password">Email or Password cannot be empty!</string>
    <string name="incorrect_field">Email or Password is incorrect!</string>


    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="login_logo">logo_small_tp</string>
    <string name="top_bg">Login Top Background</string>

    <!-- Create User Activity -->
    <string name="confirm_password">Confirm password</string>
    <string name="phone_number">Phone number</string>
    <string name="all_required">All fields are required!</string>
    <string name="pw_do_not_match">Passwords do not match!</string>
    <string name="phone_num_length">Phone number must be 10 digits long!</string>
    <string name="email_character">Email must contain "@"</string>
    <string name="email_taken">Sorry, this email is already registered.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Main Activity -->
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="search_hint">Search..</string>


    <!-- Main Fragment -->
    <string name="roster">Roster</string>
    <string name="news">News</string>
    <string name="schedule">Schedule</string>
    <string name="depth_chart">Depth Chart</string>
    <string name="depth">Depth</string>
    <string name="chart">Chart</string>
    <string name="stats">Stats</string>
    <string name="photos">Photos</string>
    <string name="podcasts">Podcasts</string>
    <string name="roster_moves">Roster Moves</string>
    <string name="shop">Shop</string>
    <string name="edit">Edit</string>
    <string name="college">College</string>

    <!-- Choose Top 5 Dialog -->
    <string name="choose_top_five">Choose Your Top 5</string>
    <string name="reset_to_default">Reset To Default</string>
    <string name="accept">Accept</string>


    <!-- Player Details Fragment -->
    <string name="player">PLAYER</string>
    <string name="description">Description:</string>
    <string name="name">Name</string>
    <string name="number">Number</string>
    <string name="position">Position</string>
    <string name="age">Age:</string>
    <string name="experience">Experience:</string>
    <string name="bio">Bio</string>
    <string name="image">Image</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="back">Back</string>


</resources>