<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_dialog_bg_top_5"
    tools:context=".ui.main.view.fragments.Top5PopUpFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center_vertical"
        android:padding="@dimen/_12sdp">


        <TextView
            android:id="@+id/choose_top_5_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_top_five"
            android:fontFamily="@font/roboto_bold"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_4sdp"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/dashboard_icons_choose_top_radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button_roster_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_helmet"
                        android:layout_gravity="center"
                        android:button="@android:color/transparent"/>

                    <TextView
                        android:id="@+id/roster_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/roster"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                    <RadioButton
                        android:id="@+id/radio_button_stats_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_stats"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:button="@android:color/transparent"/>



                    <TextView
                        android:id="@+id/stats_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/stats"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button_schedule_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_schedule"
                        android:layout_gravity="center"
                        android:button="@android:color/transparent"/>

                    <TextView
                        android:id="@+id/schedule_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/schedule"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                    <RadioButton
                        android:id="@+id/radio_button_roster_moves_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_roster_moves"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:button="@android:color/transparent"/>



                    <TextView
                        android:id="@+id/roster_moves_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/roster_moves"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10sdp"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button_depth_chart_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_depth_chart"
                        android:layout_gravity="center"
                        android:button="@android:color/transparent"/>

                    <TextView
                        android:id="@+id/depth_chart_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/depth_chart"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                    <RadioButton
                        android:id="@+id/radio_button_shop_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_shop"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:button="@android:color/transparent"/>



                    <TextView
                        android:id="@+id/shop_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/shop"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/radio_button_photos_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_photos"
                        android:layout_gravity="center"
                        android:button="@android:color/transparent"/>

                    <TextView
                        android:id="@+id/photos_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/photos"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                    <RadioButton
                        android:id="@+id/radio_button_podcast_pick"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/icon_podcasts"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_25sdp"
                        android:button="@android:color/transparent"/>



                    <TextView
                        android:id="@+id/podcast_pick_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:elevation="12dp"
                        android:text="@string/podcasts"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/steel_grey"
                        android:textSize="@dimen/_12sdp"/>

                </LinearLayout>


            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_125sdp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_20sdp"
                android:padding="@dimen/_2sdp"
                android:background="@drawable/button_bg_white"
                android:text="@string/reset_to_default"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/wolf_grey"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="true"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="@dimen/_125sdp"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:background="@drawable/button_bg_main"
                android:text="@string/accept"
                android:textSize="@dimen/_12sdp"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textAllCaps="true"/>


        </LinearLayout>

    </LinearLayout>

</FrameLayout>